--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,7 @@ a {
   background-size: cover;
   background-position: center;
   border-radius: 200px;
+
 }
 
 h6 {
@@ -57,4 +58,29 @@ h6 {
     font-family: cursive;
     color: aliceblue;
     display: inline-block;
+    vertical-align: text-bottom;
+    z-index: -1 ;
   }
+
+  adside {
+    margin-right: 20px;
+    padding: 20px;
+    clear: both;
+    float: right;
+    width: 20%;
+    height: 100%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+h2 {
+  flex-direction: column-reverse;
+}
+
+p {
+  float: right;
+  display: flex;
+  margin: -22px 57px 28px 189px;
+  text-align: center;
+  border-style: double;
+  column-rule-style: double;
+}
