--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,86 +1,92 @@
 * {
+  background-color: rgb(72, 215, 25);
   box-sizing: border-box;
   padding:0;
   margin:0;
-}
-
-body {
-  font-family: Arial;
-  margin: 0;
 }
 
 header {
   background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);;
   color: #fff;
   padding: 10px;
-}
-
-h1 {
-  background-color: lightgoldenrodyellow;
-  display: inline-block;
-  color:darkgray;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-
-.links  {
-  text-align: right;
-  
+header h1 {
+  display: inline-block;
+  font-size: 30px;
 }
-
-a {
-  color: rgb(72, 73, 72);
-  text-decoration:dashed;
-  font-size: 20px;
-  width: 320px;
-  height: 50px;
-  padding: 10px;
-  border: 1px solid gray;
-  margin: 0;
-
-}
-.hero {
-  height: 400px;
-  width: 100%;
-  margin-bottom: 25px;
-  background-image: url("../images/sunrise.jpg");
-  background-size: cover;
-  background-position: center;
-  border-radius: 200px;
-
-}
-
-h6 {
-  position: absolute;
-    top: 303px;
-    right: 27px;
-    transform: rotate(5deg);
-    font-size: 21px;
-    font-family: cursive;
-    color: aliceblue;
-    display: inline-block;
-    vertical-align: text-bottom;
-    z-index: -1 ;
-  }
-
-  adside {
-    margin-right: 20px;
-    padding: 20px;
-    clear: both;
-    float: right;
-    width: 20%;
-    height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-h2 {
-  flex-direction: column-reverse;
-}
-
-p {
+header nav { 
+  padding-top: 15px;
+  margin-right: 20px;
   float: right;
-  display: flex;
-  margin: -22px 57px 28px 189px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;} 
+
+  header nav ul li { 
+    display: inline-block;
+    margin-left: 25px;
+}
+
+h6 {  
+position: absolute;
+  top: 303px;
+  right: 27px;
+  transform: rotate(5deg);
+  font-size: 21px;
+  font-family: cursive;
+  color: aliceblue;
+  display: inline-block;
+  vertical-align: text-bottom;
+  z-index: -1;
+}
+.hero{
+  position: relative;
   text-align: center;
-  border-style: double;
-  column-rule-style: double;
+  color: rgb(9, 194, 157);
+  font-family: 'Times New Roman', Times, serif;
+}
+/* Bottom left text */
+.text-container {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+aside {
+width: 30%; /* Adjust the width as needed */
+display: block;
+flex-direction: column;
+line-height: 200px;
+font-size: medium;
+margin-top: -194px;
+}
+
+.About-Me {
+    background-color: #f0f0f0;
+    padding: 18px;
+    border-radius: 65px;
+    font-family: Arial, sans-serif;
+    margin-left: 213px;
+    text-align: center;
+    margin-top: 57px;
+}
+
+
+.square-container {
+  margin-left: 213px;
+    text-align: center;
+    margin-top: 57px;
+}
+
+.botom {
+  display: block;
+  width: 300px;
+  height: 300px;
+  background-color: #ccc;
+  margin: 5px;
+  text-align: center;
+  line-height: 50px;
+  text-decoration: none;
+  color: #000;
+  align-items: flex-start;
 }
