--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,8 +10,11 @@ box-sizing:border-box;
 header {
   background-image: linear-gradient(90deg, #020024 0%, #090979 35%, #00d4ff 100%);;
   color: #fff;
-  padding: 10px;
+  padding: 39px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  justify-content: end;
+  
+
 }
 /* use of display to make it part of my header element with the proper sizing */
 header h1 {
@@ -25,7 +28,7 @@ header nav {
   float: right;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
-  display: contents;
+
 } 
 
   /* here in telling that my elements needs to be horizontally instead of a column  */
